--- a/SFW-Mockup.css
+++ b/SFW-Mockup.css
@@ -1,4 +1,11 @@
-﻿.inner-body
+﻿body
+{
+    width:900px;
+    margin: 5px 15%;
+    background-image:url('http://jonathanbmiller.com/Content/squareBackground.png');
+    background-size: contain;
+}
+.inner-body
 {
     width: 100%;
     height: 100%;
